--- a/index.html
+++ b/index.html
@@ -7,37 +7,12 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="icon" href="images/favicon.ico" type="image/gif" sizes="16x16">
 	</head>
-	<script>
-		var i = 0 , j = 0;
-		var txt1 = 'Hi! Im Dolton Fernandes';
-		var txt2 = 'Welcome To My Personal Website';
-		function typeWriter() {
-			if (i < txt1.length) {
-				document.getElementById("heading1").innerHTML += txt1.charAt(i);
-				i++;
-				setTimeout(typeWriter, 100);
-			}
-			else
-			{
-				if (j < txt2.length) {
-					document.getElementById("heading2").innerHTML += txt2.charAt(j);
-					j++;
-					setTimeout(typeWriter, 100);
-				}
-			}
-		}
-		function mail() {
-			console.log(document.getElementById('name').value);
-			console.log(document.getElementById('email').value);
-			console.log(document.getElementById('message').value);
-			alert("Mail Sent");
-			return false
-		}
-	</script>
-	<body onload="typeWriter()">
+	<script type="text/javascript" src="assets/js/index.js"></script>
+	<body id='main_body' onload="typeWriter()">
 
 			<header id="header">
 				<div class="logo"><a href="index.html">HomePage</a></div>
+				<div class="logo" style="left: 170px;"><a href="corona.html">Coronavirus</a></div>
 				<a href="#menu"><span>Menu</span></a>
 			</header>
 
@@ -129,6 +104,8 @@
 							<li><input value="Send Message" class="button alt" type="submit"></li>
 						</ul>
 					</form>
+
+					<!-- <button onclick="up_arrow()">Click Me</button> -->
 
 					<ul class="icons">
 						<li><a href="https://github.com/doltonfernandes" class="icon round fa-github"><span class="label">Github</span></a></li>
