--- a/corona.html
+++ b/corona.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
 <head>
 	<title>
@@ -6,18 +6,18 @@
 	</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<link rel="stylesheet" href="assets/css/main.css" />
 	<link rel="icon" href="images/favicon.ico" type="image/gif" sizes="16x16">
 	<link rel="stylesheet" type="text/css" href="assets/css/corona.css">
 	<script type="text/javascript" src="assets/js/corona.js"></script>
 </head>
-<body  onload="make_data()">
-<h1><span class="yellow">Covid-19 Live Dashboard</pan></h1>
-<h2>Developed By <a href="https://github.com/doltonfernandes" target="_blank">Dolton Fernandes</a></h2>
-
+<body onload="make_data()">
+	
 <header id="header">
 	<div class="logo"><a href="index.html">HomePage</a></div>
 </header>
+
+<h1><span class="yellow">Covid-19 Live Dashboard</pan></h1>
+<h2>Developed By <a href="https://github.com/doltonfernandes" target="_blank">Dolton Fernandes</a></h2>
 
 <table class="container">
 	<thead>
