--- a/corona.html
+++ b/corona.html
@@ -11,7 +11,7 @@
 </head>
 	<script type="text/javascript" src="assets/js/corona.js"></script>
 <body onload="make_data()">
-	
+<div id="lol">HI</div>
 <header id="header">
 	<div class="logo"><a href="index.html">HomePage</a></div>
 </header>
