--- a/corona.html
+++ b/corona.html
@@ -11,12 +11,12 @@
 </head>
 	<script type="text/javascript" src="assets/js/corona.js"></script>
 <body onload="make_data()">
-<div id="lol">HI</div>
+
 <header id="header">
 	<div class="logo"><a href="index.html">HomePage</a></div>
 </header>
 
-<h1><span class="yellow">Covid-19 Live Dashboard</pan></h1>
+<h1><span id="lol" class="yellow">Covid-19 Live Dashboard</pan></h1>
 <h2>Developed By <a href="https://github.com/doltonfernandes" target="_blank">Dolton Fernandes</a></h2>
 
 <table class="container">
