Added seperate page for india

--- a/corona.html
+++ b/corona.html
@@ -18,6 +18,8 @@
 
 <h1><span class="yellow">Covid-19 Live Dashboard</pan></h1>
 <h2>Developed By <a href="https://github.com/doltonfernandes" target="_blank">Dolton Fernandes</a></h2>
+<div id="loader"><div class="loader"></div></div>
+<div id="button_cont" class="button_cont" align="center"></div>
 
 <table class="container">
 	<thead>
