--- a/corona.html
+++ b/corona.html
@@ -16,7 +16,7 @@
 	<div class="logo"><a href="index.html">HomePage</a></div>
 </header>
 
-<h1><span class="yellow">Covid-19 Live Dashboard</pan></h1>
+<h1><a href="corona.html" style="text-decoration: none;"><span class="yellow">Covid-19 Live Dashboard</span></a></h1>
 <h2>Developed By <a href="https://github.com/doltonfernandes" target="_blank">Dolton Fernandes</a></h2>
 <div id="loader"><div class="loader"></div></div>
 <div id="button_cont" class="button_cont" align="center"></div>
