Added Church RL

--- a/ChurchSingRL/index.html
+++ b/ChurchSingRL/index.html
@@ -28,6 +28,7 @@
       <th scope="col">Rank</th>
       <th scope="col">Name</th>
       <th scope="col">Views</th>
+      <th scope="col">Link</th>
     </tr>
   </thead>
   <tbody id="tbd">
