--- a/ChurchSingRL/index.html
+++ b/ChurchSingRL/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>
-		Coronavirus Dashboard
+		Church Singing Ranklist
 	</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -16,7 +16,7 @@
 	<div class="logo"><a href="./../index.html">HomePage</a></div>
 </header>
 
-<h1><a href="index.html" style="text-decoration: none;"><span class="yellow">Live Church Singing Ranklist</span></a></h1>
+<h1><a href="index.html" style="text-decoration: none;"><span class="yellow">Church Singing Ranklist</span></a></h1>
 <h2>Developed By <a href="https://github.com/doltonfernandes" target="_blank">Dolton Fernandes</a></h2>
 <div id="loader"><div class="loader"></div></div>
 <div id="button_cont" class="button_cont" align="center"></div>
