--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						<div class="content">
 							<p>Currently pursuing CSD ( BTech in Computer Science and Engineering & MS in Computer Science ) Degree at International Institue of Information Technology, Hyderabad ( IIIT-H )</p>
 							<p>Hometown in Kumta, Karnataka ❤️</p>
-							<p>Born and brought up in Goa</p>
+							<p>Brought up in Goa</p>
 						</div>
 					</article>
 				</div>
